# awesome-codex-plugins

./: CONTRIBUTING.md  README.md  plugins.json
.agents/plugins/: marketplace.json
.github/workflows/: claim-notice.yml  sync-scanner-version.yml
plugins/0xsarwagya/ontoly-codex-plugin/: .codexignore  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
plugins/AUN-PN/unity-agent-workflows/: SKILL.md
plugins/Abhigyan-Shekhar/Waggle-mcp/: LICENSE  README.md  SECURITY.md
plugins/AgiFlow/ai-plugin/: .mcp.json  LICENSE  README.md
plugins/Alex0nder/MailAgent/: README.md
plugins/Alex0nder/mailagent/: .env.example  .mcp.json  LICENSE  README.md
plugins/BB-84C/bgs-modding-superpowers/: .mcp.json
plugins/BestLemoon/codex-seo/: NOTICE.md  pyproject.toml
plugins/CarrotGamesStudios/vidseeds-mcp/: .codexignore  .mcp.json  README.md  SECURITY.md  SKILL.md  codex.mcp.json  package-lock.json  package.json
plugins/Colin4k1024/tsp/: package-lock.json  package.json
plugins/GanyuanRan/Aegis/: README.md  package.json
plugins/Humiris/wwa-transform/: SKILL.md
plugins/JeongJaeSoon/agent-guard/: hooks.json
plugins/Kanevry/session-orchestrator/: README.md  package-lock.json  package.json
plugins/LVTD-LLC/skills/: README.md  package-lock.json  package.json
plugins/MageByte-Zero/spec-superflow/: .codexignore  README.md  SECURITY.md
plugins/MedAdemBHA/docflow/: LICENSE  README.md  SECURITY.md
plugins/MiguelMedeiros/unforgit-codex-plugin/: .mcp.json  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
plugins/PapiScholz/roadmapsmith/: .codexignore  LICENSE  README.md  SECURITY.md
plugins/Pythoughts-labs/designer-skill/: .codexignore  LICENSE  README.md  SECURITY.md  mcp.json
plugins/RBraga01/Quality-Engineering-Skills/: .codexignore  LICENSE  README.md  SECURITY.md
plugins/Raishin/vanguard-frontier-agentic/: .codexignore  README.md  SECURITY.md
plugins/SamurAIGPT/Generative-Media-Skills/: .codexignore  README.md  SECURITY.md
plugins/ScrapeGraphAI/just-scrape/: .codexignore  README.md  SECURITY.md  package.json
plugins/Suraj1235/open-dynamic-workflows/: .mcp.json  README.md  package.json
plugins/TerminallyLazy/tree-ring-memory-codex-plugin/: .codexignore  LICENSE  README.md  SECURITY.md
plugins/ValkyrLabs/GrayMatter/: .app.json  README.md  SKILL.md
plugins/Xquik-dev/hermes-tweet/: README.md  pyproject.toml
plugins/Xquik-dev/x-twitter-scraper/: .mcp.json  README.md  package-lock.json  package.json
plugins/aklofas/kicad-happy/: README.md
plugins/alelaguard/agentguards-plugins/: README.md
plugins/anzy-renlab-ai/pronounce/: .codexignore  .mcp.json  README.md
plugins/archcore-ai/plugin/: .mcp.json
plugins/armoriq/armorCodex/: package-lock.json  package.json
plugins/armoriq/armorcodex/: .codexignore  .mcp.json  .plugin-scanner.toml  LICENSE  (+4 more)
plugins/avalonreset/seo-dungeon/: .codexignore  LICENSE  README.md  SECURITY.md  pyproject.toml
plugins/avalonreset/seo-dungeon/.codex-plugin/: plugin.json
plugins/avalonreset/seo-dungeon/.github/: dependabot.yml
plugins/avalonreset/seo-dungeon/skills/seo/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-audit/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-backlinks/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-cluster/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-cluster/templates/: cluster-map.html
plugins/avalonreset/seo-dungeon/skills/seo-competitor-pages/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-content/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-content-brief/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-dataforseo/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-drift/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-ecommerce/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-flow/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-geo/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-google/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-google/references/: auth-setup.md
plugins/avalonreset/seo-dungeon/skills/seo-hreflang/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-image-gen/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-images/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-local/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-maps/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-page/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-plan/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-programmatic/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-schema/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-sitemap/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-sxo/: SKILL.md
plugins/avalonreset/seo-dungeon/skills/seo-technical/: SKILL.md
plugins/douglasmonsky/codex-usage-tracker/: README.md  package-lock.json  package.json  pyproject.toml
plugins/douglasmonsky/codex-usage-tracker/.codex-plugin/: plugin.json
plugins/douglasmonsky/codex-usage-tracker/skills/codex-usage-api/: SKILL.md
plugins/douglasmonsky/codex-usage-tracker/skills/codex-usage-tracker/: SKILL.md
plugins/douglasmonsky/codex-usage-tracker/skills/codex-usage-tracker/scripts/: run_mcp.py
plugins/mimfort/rag_for_git/: README.md  pyproject.toml
plugins/mimfort/rag_for_git/.agents/plugins/: marketplace.json
plugins/mimfort/rag_for_git/.codex-plugin/: plugin.json
plugins/mimfort/rag_for_git/.github/: dependabot.yml
plugins/mimfort/rag_for_git/plugin/skills/review-pr/: SKILL.md
plugins/mimfort/rag_for_git/plugin/skills/solve-task/: SKILL.md
plugins/vishal2612200/agentpack/: .codexignore  .mcp.json  LICENSE  README.md  SECURITY.md  pyproject.toml
plugins/vishal2612200/agentpack/.codex-plugin/: plugin.json
plugins/vishal2612200/agentpack/.github/: dependabot.yml
plugins/vishal2612200/agentpack/skills/: agentpack-learn.md  agentpack-pack.md  agentpack-refresh.md  agentpack-review.md  agentpack-route.md  agentpack.md
scripts/: generate_plugins_json.py  post-claim-notice.py  sync_scanner_version.py
(+2116 files in other folders)
